--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <audio autoplay="1" loop="true" src="./backsound/Welcome-horizon.m4a"></audio>
     <title>Main Game</title>
 </head>
 <body>
