--- a/about.html
+++ b/about.html
@@ -14,11 +14,67 @@
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <label class="logo">DesignX</label>
+        <label class="logo">Pat Your Pet</label>
         <ul>
             <li><a href="main.html">Main Game</a></li>
             <li><a class="active">About Us</a></li>
         </ul>
     </nav>
+    <div id="about">
+        <label>About Us</label>
+    </div>
+    <div id="profil">
+        <div id="data">
+            <img>
+            <div>
+                <h4>Aurelius Brandon Alexander Abuthan (00000075101)</h4>
+                <p> Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Duis aute irure dolor,
+                    vel magna aliquet. Donec efficitur
+                    sapien et tincidunt imperdiet. Nulla facili,
+                    sed semper nulla facilisis.
+                </p>
+            </div>
+        </div>
+        <div id="data">
+            <img>
+            <div>
+                <h4>Fidel Brian Dava (00000073866)</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Duis aute irure dolor,
+                    vel magna aliquet. Donec efficitur
+                    sapien et tincidunt imperdiet. Nulla facili,
+                    sed semper nulla facilisis.
+                </p>
+            </div>
+        </div>
+        <div id="data">
+            <img>
+            <div>
+                <h4>Farhan Ammar Hakim (00000074745)</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Duis aute irure dolor,
+                    vel magna aliquet. Donec efficitur
+                    sapien et tincidunt imperdiet. Nulla facili,
+                    sed semper nulla facilisis.
+                </p>
+            </div>
+        </div>
+        <div id="data">
+            <img src="asset/martin kece.jpeg">
+            <div>
+                <h4>Marthin Riyaldo Solini Kese (00000073777)</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur
+                    adipiscing elit. Duis aute irure dolor,
+                    vel magna aliquet. Donec efficitur
+                    sapien et tincidunt imperdiet. Nulla facili,
+                    sed semper nulla facilisis.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
