--- a/main.html
+++ b/main.html
@@ -24,12 +24,27 @@
         </ul>
     </nav>
     <div class="container">
-        <div>
-            <div id="money">
+        <div id="judul">
+            <h1>Idle Clicker Game (Tahu Bulat)</h1>
+        </div>
+        <div id="buy">
+            <div>
+                <div id="money">
                 <span id="moneyCount">0</span>
             </div>
-            <div id="upgrade">
+            <!-- <div id="upgrade">
 
+            </div> -->
+            </div>
+            <div id="autoCLicker">
+                <p>Auto Clickers: </p>
+                <p>Cost: 10</p>
+                <button>Buy Auto-Clickers</button>
+            </div>
+            <div id="multiplier">
+                <p>Buka Cabang Tahu Bulat: 1</p>
+                <p>Cost: 50</p>
+                <button>Buy Multiplier</button>
             </div>
         </div>
         <div id="pet">
