update main kasar

--- a/main.html
+++ b/main.html
@@ -30,14 +30,38 @@
                 <span id="moneyCount"></span>
             </div>
             <div id="upgrade">
-
+                <div id="up">
+                    <img src="./asset/shoot.webp" alt="">
+                    <p>upgrade power</p>
+                    <button><span>10 C</span></button>
+                </div>
+                <div id="up">
+                    <img src="./asset/shoot.webp" alt="">
+                    <p>upgrade power</p>
+                    <button><span>10 C</span></button>
+                </div>
+                <div id="up">
+                    <img src="./asset/shoot.webp" alt="">
+                    <p>upgrade power</p>
+                    <button><span>10 C</span></button>
+                </div>
+                <div id="up">
+                    <img src="./asset/shoot.webp" alt="">
+                    <p>upgrade power</p>
+                    <button><span>10 C</span></button>
+                </div>
             </div>
         </div>
         <div id="pet">
             <img src="./asset/rimuru-pixelart.gif" onclick="auto()" alt="">
         </div>
         <div id="clicker">
-            <button onclick="auto()"></button>
+            <div>
+                <button id="autoClick" onclick="auto()">Autoclick</button>
+            </div>
+            <div>
+                <button id="multi">Multiplier</button>
+            </div>
         </div>
     </div>
 
