ngubah about us

--- a/about.html
+++ b/about.html
@@ -21,59 +21,61 @@
             <li><a class="active">About Us</a></li>
         </ul>
     </nav>
-    <div id="about">
-        <label>About Us</label>
-    </div>
-    <div id="profil">
-        <div id="data">
-            <img>
-            <div>
-                <h4>Aurelius Brandon Alexander Abuthan (00000075101)</h4>
-                <p> Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Duis aute irure dolor,
-                    vel magna aliquet. Donec efficitur
-                    sapien et tincidunt imperdiet. Nulla facili,
-                    sed semper nulla facilisis.
-                </p>
-            </div>
+    <div id="container">
+        <div id="about">
+            <label>About Us</label>
         </div>
-        <div id="data">
-            <img>
-            <div>
-                <h4>Fidel Brian Dava (00000073866)</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Duis aute irure dolor,
-                    vel magna aliquet. Donec efficitur
-                    sapien et tincidunt imperdiet. Nulla facili,
-                    sed semper nulla facilisis.
-                </p>
+        <div id="profil">
+            <div id="data">
+                <img src="asset/Artboard 2.png">
+                <div>
+                    <h4>Aurelius Brandon Alexander Abuthan (00000075101)</h4>
+                    <p> Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Duis aute irure dolor,
+                        vel magna aliquet. Donec efficitur
+                        sapien et tincidunt imperdiet. Nulla facili,
+                        sed semper nulla facilisis.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div id="data">
-            <img>
-            <div>
-                <h4>Farhan Ammar Hakim (00000074745)</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Duis aute irure dolor,
-                    vel magna aliquet. Donec efficitur
-                    sapien et tincidunt imperdiet. Nulla facili,
-                    sed semper nulla facilisis.
-                </p>
+            <div id="data">
+                <img src="asset/fidel.jpg">
+                <div>
+                    <h4>Fidel Brian Dava (00000073866)</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Duis aute irure dolor,
+                        vel magna aliquet. Donec efficitur
+                        sapien et tincidunt imperdiet. Nulla facili,
+                        sed semper nulla facilisis.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div id="data">
-            <img src="asset/martin kece.jpeg">
-            <div>
-                <h4>Marthin Riyaldo Solini Kese (00000073777)</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit. Duis aute irure dolor,
-                    vel magna aliquet. Donec efficitur
-                    sapien et tincidunt imperdiet. Nulla facili,
-                    sed semper nulla facilisis.
-                </p>
+            <div id="data">
+                <img src="asset/daun.png">
+                <div>
+                    <h4>Farhan Ammar Hakim (00000074745)</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Duis aute irure dolor,
+                        vel magna aliquet. Donec efficitur
+                        sapien et tincidunt imperdiet. Nulla facili,
+                        sed semper nulla facilisis.
+                    </p>
+                </div>
+            </div>
+            <div id="data">
+                <img src="asset/pemandangan.jpg">
+                <div>
+                    <h4>Marthin Riyaldo Solini Kese (00000073777)</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Duis aute irure dolor,
+                        vel magna aliquet. Donec efficitur
+                        sapien et tincidunt imperdiet. Nulla facili,
+                        sed semper nulla facilisis.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
