--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
-    <audio autoplay="1" loop="true" src="./backsound/Welcome-horizon.m4a"></audio>
+    <!-- <audio autoplay="1" loop="true" src="./backsound/Welcome-horizon.m4a"></audio> -->
     <title>Main Game</title>
 </head>
 
@@ -51,18 +51,20 @@
                     <button><span>10 C</span></button>
                 </div>
             </div>
-        </div>
-        <div id="pet">
-            <img src="./asset/rimuru-pixelart.gif" onclick="auto()" alt="">
-        </div>
-        <div id="clicker">
-            <div>
-                <button id="autoClick" onclick="auto()">Autoclick</button>
+            <div id="pet">
+                <img src="./asset/rimuru-pixelart.gif" onclick="auto()" alt="">
             </div>
-            <div>
-                <button id="multi">Multiplier</button>
+            <div id="clicker">
+                <div>
+                    <button id="autoClick" onclick="auto()">Autoclick</button>
+                </div>
+                <div>
+                    <button id="multi">Multiplier</button>
+                </div>
             </div>
         </div>
+        
+        
     <div class="content">
         <div id="money"></div>
         <div id="upgrade"></div>
