--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     </nav>
     <div id="container">
         <div id="about">
-            <label>About Us</label>
+            <label>Our Team</label>
         </div>
         <div id="profil">
             <div id="data">
