--- a/main.html
+++ b/main.html
@@ -25,11 +25,11 @@
         </ul>
     </nav>
     <div class="container">
-        <div>
-            <div id="money">
+        <div id="grid">
+            <div id="money" style="grid-area: x;">
                 <span id="moneyCount"></span>
             </div>
-            <div id="upgrade">
+            <div id="upgrade" style="grid-area: x;">
                 <div id="up">
                     <img src="./asset/shoot.webp" alt="">
                     <p>upgrade power</p>
@@ -51,10 +51,10 @@
                     <button><span>10 C</span></button>
                 </div>
             </div>
-            <div id="pet">
+            <div id="pet" style="grid-area: y;">
                 <img src="./asset/rimuru-pixelart.gif" onclick="auto()" alt="">
             </div>
-            <div id="clicker">
+            <div id="clicker" style="grid-area: w;">
                 <div>
                     <button id="autoClick" onclick="auto()">Autoclick</button>
                 </div>
