--- a/main.html
+++ b/main.html
@@ -28,14 +28,31 @@
             </ul>
         </nav>
     </header>
-    <div class="container">
-        <div id="shop">
+        
 
+    <div class="container">
+        <div id="clicker">
+            <div class="market">
+                <button class="shop-toggle" aria-controls="shop" aria-expanded="false"><i class="fa-solid fa-store fa-2xl" style="color: #ffffff;"></i></button>
+                <div id="counter">
+
+                </div>
+                <div id="shop" data-visible="false">
+                    Shop
+                </div>
+            </div>
+            <div class="upgrade">
+                <div class="autoclicker">
+                    <button>Add</button>
+                </div>
+                <div class="multiplier">
+                    <button>Multiply</button>
+                </div>
+            </div>
         </div>
         <div id="characterpet">
-
+            <img src="asset/rimuru-pixelart.gif" alt="">
         </div>
-        <div id="clicker"></div>    
     </div>
 
     <script src="main.js"></script>
