--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="main.html" class="logo">logo</a>
+        <a href="main.html" class="logo"><img src="./asset/fixNobg.png" alt=""></a>
         <button class="mobile-nav-toggle" aria-controls="navbar" aria-expanded="false"><i class="fa-solid fa-bars fa-xl" style="color: #f2f2f2;"></i></button>
         <nav>
             <ul id="navbar" data-visible="false">
@@ -41,6 +41,9 @@
                 </div>
             </div>
         </div>
+        <div id="duitid">
+            <span id="moneyCount">0</span>
+        </div>
         <div id="characterpet">
             <img src="asset/rimuru-pixelart.gif" alt="">
         </div>
@@ -51,7 +54,21 @@
 
         </div>
         <div id="shop" data-visible="false">
-            Shop
+            <p id="shoptext">SHOP</p>
+            <div>
+                <div id="upgrades">
+                    <p>Upgrade</p>
+                    <button>10 C</button>
+                </div>
+                <div id="upgrades">
+                    <p>Upgrade</p>
+                    <button>10 C</button>
+                </div>
+                <div id="upgrades">
+                    <p>Upgrade</p>
+                    <button>10 C</button>
+                </div>
+            </div>
         </div>
     </div>
 
