--- a/about.html
+++ b/about.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="about.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <audio autoplay="1" loop="true" src="./backsound/Welcome-horizon.m4a"></audio>
     <title>About Us</title>
 </head>
+
 <body>
     <nav>
         <input type="checkbox" id="check">
@@ -78,6 +80,24 @@
                 </div>
             </div>
         </div>
+        <div id="referensi">
+            <div>
+                <label>Referensi</label>
+            </div>
+            <uL>
+                <li>
+                    <p>Youtube Tutorial from</p>
+                </li>
+                <li>
+                    <p>Youtube Tutorial from</p>
+                </li>
+                <li>
+                    <p>Youtube Tutorial from</p>
+                </li>
+            </uL>
+
+        </div>
     </div>
 </body>
+
 </html>
