--- a/main.html
+++ b/main.html
@@ -28,16 +28,14 @@
             </ul>
         </nav>
     </header>
-        
-
     <div class="container">
         <div id="clicker">
             <div class="upgrade">
                 <div class="autoclicker">
-                    <button>Add</button>
+                    <button onclick="upgradeClicker()">Add</button>
                 </div>
                 <div class="multiplier">
-                    <button>Multiply</button>
+                    <button onclick="upgradeMultiplier()">Multiply</button>
                 </div>
             </div>
         </div>
@@ -45,7 +43,7 @@
             <span id="moneyCount">0</span>
         </div>
         <div id="characterpet">
-            <img src="asset/rimuru-pixelart.gif" alt="">
+            <img src="asset/rimuru-pixelart.gif" onclick="addMoney()" alt="">
         </div>
     </div>
     <div class="market">
@@ -74,8 +72,8 @@
 
     <script src="main.js"></script>
     <script>
-        var moneyCount = document.getElementById("moneyCount");
-        moneyCount.setAttribute("money", localStorage.getItem("money"));
+        var counter = document.getElementById("moneyCount");
+        counter.setAttribute("money", localStorage.getItem("money"));
         money = document.getElementById("moneyCount").getAttribute("money");
         document.getElementById("moneyCount").innerHTML = money;
 
