--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    <title>BADDEST DUCK</title>
+    <title>Pat your Pet</title>
     <audio autoplay="1" loop="true" src="./backsound/Welcome-horizon.m4a"></audio>
 </head>
 <body>
     <div class="container">
         <div id="ducktext" class="text-left">
-            <p id="title">Lets Play With</p>
-            <p id="title">The <span id="auto-type"></span> Pet</p>
+            <p id="title"><span id="auto-type"></span> Your Pet</p>
+            <p id="title1">idle-clicker</p>
         </div>
         <div id="Logo">
             <img id="logoimg" src="./asset/fixNobg.png">
@@ -37,7 +37,7 @@
     <script src="https://unpkg.com/typed.js@2.0.132/dist/typed.umd.js"></script>
   <script>
     var typed = new Typed('#auto-type', {
-      strings: ['Baddest', 'Coolest', 'Cutest'],
+      strings: ['get', 'pat'],
       typeSpeed: 100,
       backSpeed: 150,
       loop: true
