--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/71ca66d8b8.js" crossorigin="anonymous"></script>
 
-    <!-- <audio autoplay="1" loop="true" src="./backsound/Welcome-horizon.m4a"></audio> -->
+    <audio autoplay="1" loop="true" src="./backsound/Welcome-horizon.m4a"></audio>
     <title>Pat Your Pet</title>
 </head>
 
