--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="main.html" class="logo"><img src="./asset/fixNobg.png" alt=""></a>
+        <a href="main.html" class="logo"><img src="./asset/fixNobg.png" alt=""></a><p id="titletext">Pet Your Pet</p>
         <button class="mobile-nav-toggle" aria-controls="navbar" aria-expanded="false"><i class="fa-solid fa-bars fa-xl" style="color: #f2f2f2;"></i></button>
         <nav>
             <ul id="navbar" data-visible="false">
