--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </nav>
     <div id="container">
         <div id="about">
-            <label>Our Team</label>
+            <label>About Us</label>
         </div>
         <div id="profil">
             <div id="data">
@@ -86,13 +86,13 @@
             </div>
             <uL>
                 <li>
-                    <p>Youtube Tutorial from</p>
+                    <p>Youtube Tutorial from<a href="#"></a></p>
                 </li>
                 <li>
-                    <p>Youtube Tutorial from</p>
+                    <p>Youtube Tutorial from<a href="#"></a></p>
                 </li>
                 <li>
-                    <p>Youtube Tutorial from</p>
+                    <p>Youtube Tutorial from<a href="#"></a></p>
                 </li>
             </uL>
 
