--- a/about.html
+++ b/about.html
@@ -27,8 +27,6 @@
         </nav>
     </header>
 
-
-
     <div class="container">
         <div id="about">
             <label>Our Team</label>
@@ -101,9 +99,26 @@
                     <p>Youtube Tutorial from</p>
                 </li>
             </uL>
-
         </div>
     </div>
+    <script>
+        const nav = document.querySelector("#navbar");
+const navToggle = document.querySelector(".mobile-nav-toggle");
+
+navToggle.addEventListener("click", () => {
+    const visibility = nav.getAttribute("data-visible");
+    
+    if (visibility === "false") {
+        nav.setAttribute("data-visible", "true");
+        navToggle.setAttribute("aria-expanded", "true");
+        navToggle.innerHTML = '<i class="fa-solid fa-xmark fa-2xl" style="color: #ffffff;"></i>';
+    } else if (visibility === "true") {
+        nav.setAttribute("data-visible", "false");
+        navToggle.setAttribute("aria-expanded", "false");
+        navToggle.innerHTML ='<i class="fa-solid fa-bars fa-2xl" style="color: #f2f2f2;"></i>'
+    }
+})
+    </script>
 </body>
 
 </html>
