upgrade pet button selesai

--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
                 <div id="upgrades">
                     <p>Upgrade Pet</p>
                     <p>give your pet a treat so they wont get bored</p>
-                    <button><span id="petbuy">1000</span></button>
+                    <button onclick="upgradepet()"><span id="petbuy">1000</span></button>
                 </div>
             </div>
         </div>
