--- a/main.html
+++ b/main.html
@@ -61,8 +61,10 @@
                 </div>
                 <div id="upgrades">
                     <p>Upgrade Multiplier</p>
+                    <p id="income-multipliers">Cabang :</p>
+                    <p id="income-multiplier-cost"></p>
                     <p>upgrade the multplier = EZ mode</p>
-                    <button><span id="multibuy">200</span></button>
+                    <button><span id="income-mulitpier">beli</span></button>
                 </div>
                 <div id="upgrades">
                     <p>Upgrade Pet</p>
