--- a/about.html
+++ b/about.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="about.css">
-    <script src="https://kit.fontawesome.com/71ca66d8b8.js" crossorigin="anonymous"></script>
-    <!-- <audio autoplay="1" loop="true" src="./backsound/Welcome-horizon.m4a"></audio> -->
+    <link  rel="stylesheet" href="about.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <audio autoplay="1" loop="true" src="./backsound/Welcome-horizon.m4a"></audio>
     <title>About Us</title>
 </head>
-
 <body>
-    <header>
-        <a href="main.html" class="logo"><img src="./asset/fixNobg.png" alt=""></a>
-        <button class="mobile-nav-toggle" aria-controls="navbar" aria-expanded="false"><i class="fa-solid fa-bars fa-xl" style="color: #f2f2f2;"></i></button>
-        <nav>
-            <ul id="navbar" data-visible="false">
-                <li>
-                    <a href="main.html">Play</a>
-                </li>
-                <li class="active">
-                    <a href="about.html">About Us</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-
-
-    <div class="container">
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+        <label class="logo">Pat Your Pet</label>
+        <ul>
+            <li><a href="main.html">Main Game</a></li>
+            <li><a class="active">About Us</a></li>
+        </ul>
+    </nav>
+    <div id="container">
         <div id="about">
             <label>Our Team</label>
         </div>
@@ -86,7 +78,26 @@
                 </div>
             </div>
         </div>
+        <div id="referensi">
+            <div>
+                <label>Referensi</label>
+            </div>
+            <uL>
+                <li>
+                    <p>Github Repository :<a href="https://github.com/Relchzen/patyourpet/tree/main"> https://github.com/Relchzen/patyourpet/tree/main</a></p>
+                </li>
+                <li>
+                    <p>Place holder image :<a href="https://id.pinterest.com/pin/1067634655388962721/">https://id.pinterest.com/pin/1067634655388962721/</a></p>
+                </li>
+                <li>
+                    <p>Youtube tutorial :<a href="https://www.youtube.com/watch?v=-Zz23FFDHLA">https://www.youtube.com/watch?v=-Zz23FFDHLA</a></p>
+                </li>
+                <li>
+                    <p>Brody cium image :<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2Fskipberat%2Fstatus%2F1629535720628178951&psig=AOvVaw3w_u-ngbh1rlTX682zOtQA&ust=1680875497267000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJinqq-zlf4CFQAAAAAdAAAAABAE"> https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2Fskipberat%2Fstatus%2F1629535720628178951&psig=AOvVaw3w_u-ngbh1rlTX682zOtQA&ust=1680875497267000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCJinqq-zlf4CFQAAAAAdAAAAABAE</a></p>
+                </li>
+            </uL>
+
+        </div>
     </div>
 </body>
-
 </html>
